# observable-manifold-network

./: .gitignore  AGENTS.md  LICENSE  README.md  README_90_SECONDS.md  pyproject.toml
configs/: README.md  omn_default.json
docs/: DOCS_REGISTRY.md  README.md
examples/: README.md  artifact_graph_seed.py  lorenz_seed.py  synthetic_toy_seed.py
outputs/: README.md
rcc/: README.md
releases/: omn_sa_v0_9_4_release_manifest.json  omn_sa_v0_9_4_release_manifest.md  omn_sa_v1_0_0_stable_public_runtime_checkpoint.json  omn_sa_v1_0_0_stable_public_runtime_checkpoint.md
reports/: README.md
schemas/: README.md
scripts/: README.md  build_package.ps1  run_all_checks.ps1  run_local.ps1  run_tests.ps1
src/: README.md
tests/: README.md  test_graph_contracts.py  test_omn_sa_v0_2_architecture.py  test_omn_sa_v0_3_modular_core.py  test_omn_sa_v0_4_graph_engine.py  test_omn_sa_v0_5_rcc_metrics.py  test_omn_sa_v0_6_evidence_replay.py  test_omn_sa_v0_7_1_rcc_n_profile.py  test_omn_sa_v0_7_2_readme_self_organization.py  test_omn_sa_v0_7_3_readme_lineage.py  test_omn_sa_v0_7_evidence_drift.py  test_omn_sa_v0_8_2_readme_lineage_policy.py  test_omn_sa_v0_8_3_ci_release_boundary.py  test_omn_sa_v0_8_metric_availability.py  test_omn_sa_v0_9_0_deterministic_modes.py  test_omn_sa_v0_9_1_stable_evidence_index.py  test_omn_sa_v0_9_2_public_metrics_dashboard.py  test_omn_sa_v0_9_3_readme_registry_autopatcher.py  test_omn_sa_v0_9_4_release_manifest.py  test_omn_sa_v0_9_5_v1_0_readiness_gate.py  test_omn_sa_v1_0_0_stable_public_checkpoint.py  test_rcc_nexus_integrity.py  test_runtime.py  (+1 more)
(+220 files in other folders)
