[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observable-manifold-network"
version = "0.1.0"
description = "Minimal OMN-SA v0.1 runtime for observable topology, graph contracts, residual validation, and evidence-gated claims."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "James Paul Jackson" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
omn = "omn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"